include_directories(${CMAKE_SOURCE_DIR}/libsrc/)
add_definitions(-D__ZLIB_AVAILABLE__)

add_executable(metaltest metaltest.cpp)
target_link_libraries(metaltest goncalo ${ZLIB_LIBRARIES})

add_test(NAME NORMP COMMAND metaltest test_normp)
add_test(NAME BINORMP COMMAND metaltest test_binormp)
add_test(NAME BINORMQ COMMAND metaltest test_binormq)

file(COPY Data DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

file(COPY test_01 DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
add_test(NAME SAMPLESIZE_NOGC WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/test_01
        COMMAND ${CMAKE_COMMAND}
        -DMETAL=${CMAKE_BINARY_DIR}/metal/metal
        -DMETAL_TBL=${CMAKE_CURRENT_SOURCE_DIR}/test_01/METAANALYSIS1.TBL
        -P ${CMAKE_CURRENT_SOURCE_DIR}/compare.cmake)

#file(COPY test_02 DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
#add_test(NAME SAMPLESIZE_NOGC_OVERLAP WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/test_01
#        COMMAND ${CMAKE_COMMAND}
#        -DMETAL=${CMAKE_BINARY_DIR}/metal/metal
#        -DMETAL_TBL=${CMAKE_CURRENT_SOURCE_DIR}/test_02/METAANALYSIS1.TBL
#        -P ${CMAKE_CURRENT_SOURCE_DIR}/compare.cmake)

file(COPY test_03 DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
add_test(NAME SAMPLESIZE_GC WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/test_03
        COMMAND ${CMAKE_COMMAND}
        -DMETAL=${CMAKE_BINARY_DIR}/metal/metal
        -DMETAL_TBL=${CMAKE_CURRENT_SOURCE_DIR}/test_03/METAANALYSIS1.TBL
        -P ${CMAKE_CURRENT_SOURCE_DIR}/compare.cmake)

file(COPY test_04 DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
add_test(NAME STDERR_NOGC WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/test_04
        COMMAND ${CMAKE_COMMAND}
        -DMETAL=${CMAKE_BINARY_DIR}/metal/metal
        -DMETAL_TBL=${CMAKE_CURRENT_SOURCE_DIR}/test_04/METAANALYSIS1.TBL
        -P ${CMAKE_CURRENT_SOURCE_DIR}/compare.cmake)

file(COPY test_05 DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
add_test(NAME STDERR_GC WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/test_05
        COMMAND ${CMAKE_COMMAND}
        -DMETAL=${CMAKE_BINARY_DIR}/metal/metal
        -DMETAL_TBL=${CMAKE_CURRENT_SOURCE_DIR}/test_05/METAANALYSIS1.TBL
        -P ${CMAKE_CURRENT_SOURCE_DIR}/compare.cmake)

file(COPY test_06 DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
add_test(NAME SAMPLESIZE_NOGC_HETEROGENEITY WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/test_06
        COMMAND ${CMAKE_COMMAND}
        -DMETAL=${CMAKE_BINARY_DIR}/metal/metal
        -DMETAL_TBL=${CMAKE_CURRENT_SOURCE_DIR}/test_06/METAANALYSIS1.TBL
        -P ${CMAKE_CURRENT_SOURCE_DIR}/compare.cmake)

file(COPY test_07 DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
add_test(NAME STDERR_NOGC_HETEROGENEITY WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/test_07
        COMMAND ${CMAKE_COMMAND}
        -DMETAL=${CMAKE_BINARY_DIR}/metal/metal
        -DMETAL_TBL=${CMAKE_CURRENT_SOURCE_DIR}/test_07/METAANALYSIS1.TBL
        -P ${CMAKE_CURRENT_SOURCE_DIR}/compare.cmake)

file(COPY test_08 DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
add_test(NAME SAMPLESIZE_NOGC_OVERLAP_HETEROGENEITY WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/test_08
        COMMAND ${CMAKE_COMMAND}
        -DMETAL=${CMAKE_BINARY_DIR}/metal/metal
        -DMETAL_TBL=${CMAKE_CURRENT_SOURCE_DIR}/test_08/METAANALYSIS1.TBL
        -DMETALTEST=${CMAKE_BINARY_DIR}/tests/metaltest
        -DCOLUMN=HetPVal
        -DCORR=0.99
        -DTOL=1.0
        -P ${CMAKE_CURRENT_SOURCE_DIR}/compare_columns.cmake)

file(COPY test_09 DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
add_test(NAME TRACK_POSITIONS WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/test_09
        COMMAND ${CMAKE_COMMAND}
        -DMETAL=${CMAKE_BINARY_DIR}/metal/metal
        -DMETAL_TBL=${CMAKE_CURRENT_SOURCE_DIR}/test_09/METAANALYSIS1.TBL
        -P ${CMAKE_CURRENT_SOURCE_DIR}/compare.cmake)

file(COPY test_10 DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
add_test(NAME PRINT_PRECISION WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/test_10
        COMMAND ${CMAKE_COMMAND}
        -DMETAL=${CMAKE_BINARY_DIR}/metal/metal
        -DMETAL_TBL=${CMAKE_CURRENT_SOURCE_DIR}/test_10/METAANALYSIS1.TBL
        -P ${CMAKE_CURRENT_SOURCE_DIR}/compare.cmake)